[tool.poetry]
name = "fic-dev"
version = "0.1.0"
description = ""
authors = ["Valtair <valtair.junior@unemat.br>"]
readme = "README.md"
packages = [{include = "fast_gen"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.1.2"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"
jinja2 = "^3.1.2"
pymdown-extensions = "^9.10"
taskipy = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules --ignore=alembic"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
profile = "black"

[tool.taskipy.tasks]
docs = "mkdocs serve"
export = "poetry export > requirements.txt --without-hashes"
install_req = "cat requirements.txt | grep -E '^[^# ]' | cut -d ';' -f1  | xargs -n 1 poetry add"
install_up_req = "cat requirements.txt | grep -E '^[^# ]' | cut -d '=' -f1  | xargs -n 1 poetry add"

